# scaff

./: .gitignore  .gitlab-ci.yml  Cargo.nix  Cargo.toml  README.md  crate-hashes.json  default.nix  flake.nix  pinned.nix
samples/: Makefile  config.toml
samples/cachix/scaff-out/: .gitlab-ci.yml  pinned.nix
samples/license-mit/scaff-out/: LICENSE  README.md
samples/nix-rust-legacy/scaff-out/: .gitlab-ci.yml  default.nix
samples/nix-rust/scaff-out/: default.nix
samples/nix-shell/scaff-out/: shell.nix
samples/nixpkgs-rust/scaff-out/: default.nix
samples/readme/scaff-out/: README.md
src/: main.rs
