[package]
name = "scaff"
version = "0.1.0"
authors = ["jD91mZM2 <me@krake.one>"]
edition = "2018"

[dependencies]
anyhow = "1.0.17"
dirs = "2.0.2"
serde = { version = "1.0.101", features = ["derive"] }
structopt = "0.3.3"
toml = "0.5.3"
just-fetch = { path = "../just-fetch", features = ["serde"] }
tar = "0.4.26"
tera = "0.11.20"
log = "0.4.8"
env_logger = "0.7.1"
git2 = "0.10.1"
